020 - fixed modal image gap

--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -15,6 +15,7 @@
     }
 
     img {
+      margin-bottom: -8px;
       width: 100%;
     }
   }
@@ -41,8 +42,8 @@
   &__close {
     background: $primary-color;
     position: absolute;
-    right: 10px;
-    top: 10px;
+    right: 5px;
+    top: 5px;
     z-index: 1;
 
     svg.MuiSvgIcon-root {
